<resources>
    <string name="app_name">Glow Lines Art</string>
    <string name="settings_icon">redirect to setting screen</string>
    <string name="background">Background</string>
    <string name="music">Music</string>
    <string name="name_music">name music</string>
    <string name="setting">Setting</string>
    <string name="sounds">Sounds</string>
    <string name="language">Language</string>
    <string name="share">Share</string>
    <string name="rate">Rate 5 stars</string>
    <string name="contact">Contact with us</string>
    <string name="energy">Energy</string>
    <string name="daily">Daily</string>
    <string name="more">More</string>
    <string name="get">Get</string>
    <string name="ads">Ads</string>
    <string name="button_continue">Continue</string>
    <string name="your_score">Your score:</string>
    <string name="download">Download</string>
    <string name="move_your_hands" >Move your finger</string>
    <string name="collection">Look like you don\'t have any collection</string>
    <string name="replay">Replay</string>
    <string name="Next">Next</string>
    <string name="Music">Music</string>
    <string name="exit">Exit Drawing?</string>
    <string name="exit_description">Your progress will be lost</string>
    <string name="no">No, Stay</string>
    <string name="yes">Yes, Exit</string>
    <string name="delete">Delete this artwork?</string>
    <string name="keep">Keep it</string>
    <string name="delete_confirm">Delete now!</string>
    <string name="all">All</string>
    <string name="anime">Anime</string>
    <string name="animal">Animal</string>
    <string name="kawaii">Kawaii</string>
    <string name="mandala">Mandala</string>
    <string name="flowers">Flowers</string>
    <string name="fantasy">Fantasy</string>
    <string name="people">People</string>
    <string-array name="category_name">
        <item>All</item>
        <item>Anime</item>
        <item>Animal</item>
        <item>Kawaii</item>
        <item>Mandala</item>
        <item>Flowers</item>
        <item>Fantasy</item>
        <item>People</item>
    </string-array>
    <string name="save">Saved to Gallery</string>
    <string name="save_error">Failed to save image</string>
    <string name="no_app_support_email">No app support to send mail</string>
    <string name="no_more_level">No more level</string>
    <string name="level_unavailable">level unavailable</string>
</resources>