<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300sp"
    android:layout_height="200sp"
    android:background="@drawable/energy_dialog_background"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/tvEnergy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/energy"
        android:textSize="30sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12sp"
        />
    <LinearLayout
        android:background="@drawable/energy_dialog_item"
        android:layout_width="100sp"
        android:layout_height="130sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEnergy"
        android:orientation="vertical"
        android:layout_marginStart="30sp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daily"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginTop="4sp"
            android:layout_gravity="center"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="14sp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+1"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_gravity="center"/>
            <ImageView
                android:layout_width="24sp"
                android:layout_height="24sp"
                android:src="@drawable/bolt"
                android:layout_gravity="center"/>
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnGetEnergy"
            android:layout_width="wrap_content"
            android:layout_height="35sp"
            android:layout_gravity="center"
            android:text="@string/get"
            android:textColor="@color/dark_blue"
            android:textAllCaps="false"
            android:layout_marginTop="20sp"
            android:background="@drawable/button_state_selection"/>
    </LinearLayout>
    <LinearLayout
        android:background="@drawable/energy_dialog_item"
        android:layout_width="100sp"
        android:layout_height="130sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEnergy"
        android:orientation="vertical"
        android:layout_marginEnd="30sp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/more"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginTop="4sp"
            android:layout_gravity="center"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="14sp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+3"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_gravity="center"/>
            <ImageView
                android:layout_width="24sp"
                android:layout_height="24sp"
                android:src="@drawable/bolt"
                android:layout_gravity="center"/>
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLoadAds"
            android:layout_width="wrap_content"
            android:layout_height="35sp"
            android:layout_gravity="center"
            android:text="@string/ads"
            android:textColor="@color/dark_blue"
            android:textAllCaps="false"
            android:layout_marginTop="20sp"
            android:background="@drawable/button_energy_background"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>