<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/exit_dialog_background">
    <ImageView
        android:id="@+id/ivDelete"
        android:layout_width="48sp"
        android:layout_height="48sp"
        android:src="@drawable/delete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="19sp"
        />
    <TextView
        android:id="@+id/tvDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:textStyle="bold"
        android:textSize="28sp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivDelete"
        android:layout_marginTop="22sp"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnKeep"
        android:layout_width="134sp"
        android:layout_height="48sp"
        android:text="@string/keep"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="#50E577"
        android:textAllCaps="false"
        android:background="@drawable/button_download_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDelete"
        app:layout_constraintEnd_toStartOf="@id/btnDelete"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="22sp"
        android:layout_marginStart="24sp"
        android:layout_marginBottom="60sp"
        android:layout_marginEnd="5sp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnDelete"
        android:layout_width="134sp"
        android:layout_height="48sp"
        android:layout_marginStart="5sp"
        android:layout_marginTop="22sp"
        android:layout_marginEnd="24sp"
        android:layout_marginBottom="60sp"
        android:background="@drawable/button_share_background"
        android:text="@string/delete_confirm"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnKeep"
        app:layout_constraintTop_toBottomOf="@id/tvDelete"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>