<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_setting">
    <ImageView
        android:id="@+id/imgBack"
        android:layout_width="24sp"
        android:layout_height="24sp"
        android:src="@drawable/left_back"
        android:layout_margin="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/tvSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting"
        android:textSize="20sp"
        android:layout_marginTop="12sp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/main"
        app:layout_constraintEnd_toEndOf="@id/main"
        app:layout_constraintTop_toTopOf="@id/main"/>
    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/sw_music"
        android:layout_width="wrap_content"
        android:layout_height="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSetting"
        android:layout_margin="8sp"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv_sounds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8sp"
        app:layout_constraintTop_toBottomOf="@id/sw_music"
        />
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layout_languages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/rcv_sounds"
        android:layout_marginTop="14sp"
        android:layout_marginHorizontal="8sp"
        android:background="@drawable/setting_border_item">
        <ImageView
            android:layout_width="32sp"
            android:layout_height="32sp"
            android:src="@drawable/language"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginStart="16sp"
            />
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layout_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/layout_languages"
        android:layout_marginTop="14sp"
        android:layout_marginHorizontal="8sp"
        android:background="@drawable/setting_border_item">
        <ImageView
            android:layout_width="32sp"
            android:layout_height="32sp"
            android:src="@drawable/setting_share"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginStart="16sp"
            />
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layout_rate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/layout_share"
        android:layout_marginTop="14sp"
        android:layout_marginHorizontal="8sp"
        android:background="@drawable/setting_border_item">
        <ImageView
            android:layout_width="32sp"
            android:layout_height="32sp"
            android:src="@drawable/star"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rate"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginStart="16sp"
            />
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layout_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/layout_rate"
        android:layout_marginTop="14sp"
        android:layout_marginHorizontal="8sp"
        android:background="@drawable/setting_border_item">
        <ImageView
            android:layout_width="32sp"
            android:layout_height="32sp"
            android:src="@drawable/email"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginStart="16sp"
            />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>