<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <nl.dionsegijn.konfetti.xml.KonfettiView
        android:id="@+id/konfettiView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="2sp"/>
    <ImageView
        android:id="@+id/imgBack"
        android:layout_width="40sp"
        android:layout_height="40sp"
        android:src="@drawable/left_back"
        app:layout_constraintTop_toTopOf="@id/main"
        app:layout_constraintStart_toStartOf="@id/main"
        android:layout_marginTop="16sp"
        android:layout_marginStart="16sp"
        android:elevation="2sp"
        />
<!--    <TextView-->
<!--        android:id="@+id/tvName"-->
<!--        android:text="name"-->
<!--        android:textSize="40sp"-->
<!--        android:textStyle="bold"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:textColor="@color/white"-->
<!--        app:layout_constraintBottom_toTopOf="@id/imgLoudspeaker"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        android:elevation="2sp"/>-->
<!--    <ImageView-->
<!--        android:id="@+id/imgLoudspeaker"-->
<!--        android:layout_width="32sp"-->
<!--        android:layout_height="32sp"-->
<!--        android:src="@drawable/loudspeaker"-->
<!--        android:elevation="2sp"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintBottom_toTopOf="@id/imgNextLevel"-->
<!--        android:layout_marginBottom="60sp"/>-->
    <ImageView
        android:id="@+id/imgEffect"
        android:layout_width="40sp"
        android:layout_height="40sp"
        android:src="@drawable/more"
        app:layout_constraintTop_toTopOf="@id/main"
        app:layout_constraintEnd_toEndOf="@id/main"
        android:layout_marginTop="16sp"
        android:layout_marginEnd="16sp"
        android:elevation="2sp"
        />

    <ImageView
        android:id="@+id/imgDownLoad"
        android:layout_width="40sp"
        android:layout_height="40sp"
        android:src="@drawable/download"
        app:layout_constraintEnd_toStartOf="@id/imgEffect"
        app:layout_constraintTop_toTopOf="@id/main"
        android:layout_marginEnd="30sp"
        android:layout_marginTop="16sp"
        android:elevation="2sp"
        />

    <com.example.magiclines.views.PlayingView
        android:id="@+id/frPlaying"
        android:layout_width="0sp"
        android:layout_height="0sp"
        android:background="@color/gray"
        android:clipChildren="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.48"
        app:layout_constraintWidth_percent="0.9" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="111sp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal"
        android:background="@drawable/category_recyclerview_background"
        android:gravity="center">
        <LinearLayout
            android:id="@+id/layoutReplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">
            <ImageView
                android:id="@+id/imgRePlay"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:src="@drawable/reolay"
                android:rotation="45" />
            <TextView
                android:layout_marginTop="8sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/replay"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:gravity="center"/>
        </LinearLayout>
    <LinearLayout
        android:id="@+id/layoutNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center">
        <ImageView
            android:id="@+id/imgNextLevel"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/next"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Next"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_marginTop="8sp"/>
    </LinearLayout>

        <!--    <ImageView-->
        <!--        android:id="@+id/imgShare"-->
        <!--        android:layout_width="48sp"-->
        <!--        android:layout_height="48sp"-->
        <!--        android:src="@drawable/share"-->
        <!--        app:layout_constraintEnd_toEndOf="@id/main"-->
        <!--        app:layout_constraintBottom_toBottomOf="@id/main"-->
        <!--        app:layout_constraintStart_toEndOf="@id/imgNextLevel"-->
        <!--        android:layout_marginBottom="48sp"-->
        <!--        android:layout_marginEnd="20sp"-->
        <!--        />-->
    <LinearLayout
        android:id="@+id/layoutmute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center">
        <ImageView
            android:id="@+id/imgMute"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:src="@drawable/mute_on"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Music"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_marginTop="8sp"/>
    </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>